--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,6 @@ include INSTALL
 include MANIFEST.in
 include COPYING
 include python-director.spec
-recursive-include tests *.py
+recursive-include tests *py
 recursive-include docs *
+prune docs/html/*
